# storage/api-docs/api-docs.json
@@ -47,6 +47,174 @@
                 }
             }
         },
+        "/articles/{articleId}": {
+            "get": {
+                "tags": [
+                    "articles"
+                ],
+                "summary": "Find article by Id",
+                "description": "Returns a single article with authors",
+                "operationId": "getArticleById",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "articleId",
+                        "in": "path",
+                        "description": "ID of proceeding to return",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Proceeding not found"
+                    }
+                }
+            }
+        },
+        "/articles": {
+            "post": {
+                "tags": [
+                    "articles"
+                ],
+                "summary": "Create a new article",
+                "description": "",
+                "operationId": "createNewArticle",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "proceeding_id",
+                        "in": "formData",
+                        "description": "Article's proceeding id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "name": "title",
+                        "in": "formData",
+                        "description": "Article's title",
+                        "required": true,
+                        "type": "string",
+                        "format": "string"
+                    },
+                    {
+                        "name": "abstract",
+                        "in": "formData",
+                        "description": "Article's abstract",
+                        "required": true,
+                        "type": "string",
+                        "format": "string"
+                    },
+                    {
+                        "name": "start_page",
+                        "in": "formData",
+                        "description": "Article's start page",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "name": "end_page",
+                        "in": "formData",
+                        "description": "Article's end page",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "name": "keywords",
+                        "in": "formData",
+                        "description": "Article's keyword. Seperate with comma. Ex: Computer technology, Information, system",
+                        "required": true,
+                        "type": "string",
+                        "format": "string"
+                    },
+                    {
+                        "name": "authors[0][name]",
+                        "in": "formData",
+                        "description": "First author's name",
+                        "required": true,
+                        "type": "string",
+                        "format": "string"
+                    },
+                    {
+                        "name": "authors[0][email]",
+                        "in": "formData",
+                        "description": "First author's email",
+                        "required": true,
+                        "type": "string",
+                        "format": "string"
+                    },
+                    {
+                        "name": "authors[0][affiliation]",
+                        "in": "formData",
+                        "description": "First author's affiliation",
+                        "required": true,
+                        "type": "string",
+                        "format": "string"
+                    },
+                    {
+                        "name": "file_type",
+                        "in": "formData",
+                        "description": "File type values of the article",
+                        "required": true,
+                        "type": "string",
+                        "default": "pdf",
+                        "enum": [
+                            "pdf",
+                            "scopus",
+                            "doaj"
+                        ]
+                    },
+                    {
+                        "name": "file_link",
+                        "in": "formData",
+                        "description": "File link value. Required if file type not pdf",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "file_pdf",
+                        "in": "formData",
+                        "description": "Upload pdf file",
+                        "required": false,
+                        "type": "file"
+                    },
+                    {
+                        "name": "doi",
+                        "in": "formData",
+                        "description": "DOI of the article",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
         "/institutions/": {
             "get": {
                 "tags": [
